# vid2pod

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  drizzle.config.ts  eslint.config.js  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  tsup.config.ts  vitest.config.ts
.Codex/: AGENTS.md
.claude/: CLAUDE.md
.github/workflows/: desktop-release.yml
agent/: setup.mjs  vid2pod-agent.mjs
agent/src/: index.ts
browser-extension/: README.md  background.js  manifest.json  popup.html  popup.js
nginx/: default.conf
scripts/: dev.sh  ensure-buckets.mts  gen-cover.ts  generate-test-audio.sh  setup-s3-lifecycle.sh  setup.mts  start.sh
src/: config.ts  index.ts
src/auth/: api-keys.ts  jwt.ts  middleware.ts  routes.ts  service.ts
src/cli/: index.ts
tests/: api-fetch.test.ts  auth.test.ts  constants.test.ts  episode-service.test.ts  global-setup.ts  idor.test.ts  licensing.test.ts  normalizer.test.ts  rss-generator.test.ts  safe-fetch.test.ts  sanitize.test.ts  server.test.ts  setup.ts  url-guard.test.ts  video-endpoint.test.ts  youtube-dl.test.ts
viddypod-desktop/: .gitignore  README.md  index.html  main.js  package-lock.json  package.json  vite.config.js
viddypod-desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
viddypod-desktop/src-tauri/capabilities/: default.json
viddypod-desktop/src-tauri/icons/: icon.icns
viddypod-desktop/src-tauri/src/: auth.rs  cookie_server.rs  downloader.rs  lib.rs  main.rs  poller.rs  state.rs  uploader.rs
(+52 files in other folders)
